wip: find package mqtt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -758,6 +758,15 @@ IF(WITH_OPENGV)
     ENDIF(opengv_FOUND)
 ENDIF(WITH_OPENGV)
 
+IF(WITH_MQTT)
+    find_package(PahoMqttCpp REQUIRED)
+    IF(PahoMqttCpp_FOUND)
+       MESSAGE(STATUS "Found PahoMqttCpp: ${PahoMqttCpp_INCLUDE_DIRS}")
+    elseif(PahoMqttCpp_FOUND)
+       MESSAGE(STATUS "Not Found PahoMqttCpp")
+    ENDIF(PahoMqttCpp_FOUND)
+ENDIF(WITH_OPENGV)
+
 IF(WITH_ORB_SLAM AND NOT G2O_FOUND)
     FIND_PACKAGE(ORB_SLAM QUIET)
     IF(ORB_SLAM_FOUND)
