--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,6 +219,7 @@ option(WITH_MADGWICK      "Include Madgwick IMU filtering support" ON)
 option(WITH_FASTCV        "Include FastCV support"               ON)
 option(WITH_OPENMP        "Include OpenMP support"               ON)
 option(WITH_OPENGV        "Include OpenGV support"               OFF)
+option(WITH_MQTT          "Include MQTT support"                 ON)
 IF(MOBILE_BUILD)
 option(PCL_OMP            "With PCL OMP implementations"         OFF)
 ELSE()
@@ -765,7 +766,7 @@ IF(WITH_MQTT)
     elseif(PahoMqttCpp_FOUND)
        MESSAGE(STATUS "Not Found PahoMqttCpp")
     ENDIF(PahoMqttCpp_FOUND)
-ENDIF(WITH_OPENGV)
+ENDIF(WITH_MQTT)
 
 IF(WITH_ORB_SLAM AND NOT G2O_FOUND)
     FIND_PACKAGE(ORB_SLAM QUIET)
